apps/base/whisper-asr-webservice/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: whisper-asr-webservice
  labels:
    toolkit.fluxcd.io/tenant: dev-team
