apps/base/whisper-asr-webservice/service.yaml
 apiVersion: v1
  kind: Service
  metadata:
    name: whisper-asr-webservice-service
    namespace: whisper-asr-webservice
    labels:
      app: whisper-asr-webservice
  spec:
    ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 9000
    selector:
      app: whisper-asr-webservice
