apps/base/whisper-asr-webservice/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whisper-asr-webservice-ingress
  namespace: whisper-asr-webservice
annotations:
  kubernetes.io/ingress.class: nginx
  cert-manager.io/cluster-issuer: letsencrypt  
spec:
  tls:
  - hosts:
      - whisper.yglabs.eu.org
    secretName: whisper-asr-webservice-tls
  rules:
  - host: whisper.yglabs.eu.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: whisper-asr-webservice-service
            port:
              number: 80
